<resources>
    <string name="app_name">Food Analyzer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_food">Add Food</string>
    <string name="search">search</string>
    <string name="breakfast_label">Breakfast</string>
    <string name="today_label">Today</string>
    <string name="date_template_label">Monday, 12 June 2021</string>
    <string name="food_name_label">Avocado</string>
    <string name="food_calorie_label">120 cals</string>
    <string name="food_name_template">Food Name Template</string>
    <string name="snap_your_food">Snap your food</string>
    <string name="select_image_instruction">Please take a picture of your breakfast or select it from your gallery</string>
    <string name="select_image">select image</string>
    <string name="retake_picture">Retake Picture</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="food_image_confirmation">Are you sure to send this image to detect what food you eat today ?</string>
    <string name="food_image_submit">yes, send it</string>
    <string name="food_image_retake">yes, send it</string>
    <string name="food_add_confirmation">Are you sure to send this image to detect what food you eat today ?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

</resources>